# snapshotdb

./: .gitignore  CMakeLists.txt  README.md
extras/include/snapshotdb/: invariant_checker.h
extras/src/: invariant_checker.cpp
include/snapshotdb/: atomic_writer.h  commit_log.h  errors.h  gc.h  log_entry.h  reader.h  recovery.h  snapshot.h  storage.h  storage_azure.h  transaction.h
include/snapshotdb/catalog/: table_layout.h
include/snapshotdb/common/: errors.h  log_entry.h
include/snapshotdb/engine/: atomic_writer.h  commit_log.h  gc.h  reader.h  recovery.h  snapshot.h  transaction.h
include/snapshotdb/storage/: azure.h  backend.h
src/: crash_commit.cpp
src/engine/: atomic_writer.cpp  commit_log.cpp  gc.cpp  reader.cpp  recovery.cpp  snapshot.cpp  transaction.cpp
src/storage/: storage_azure.cpp  storage_local.cpp
tests/: test_commit_log.cpp  test_crash.cpp  test_gc.cpp  test_invariants.cpp  test_occ.cpp  test_reader.cpp  test_recovery.cpp  test_snapshot.cpp  test_transaction.cpp
tools/: demo.cpp  http_server.cpp
